# kvs-streamer-sandbox

./: README.md
server/: Dockerfile  build.sh  run.sh  run_exec.sh  supervisord-openbox.conf
server/conf/: supervisord.conf  xorg.conf
server/kvs-streamer/: CMakeLists.txt  README  Samples.h  const.h  input.cpp  input.h  main.cpp  utils.cpp  utils.h
server/scripts/: run_exec.sh
webclient/: Dockerfile  README.md  package.json  run.sh  webpack.dev.config.js
webclient/examples/: app.css  app.js  index.html  input.js  viewer.js
webclient/src/: index.html  index.js  kinesis.js
webclient/src/static/: app.js  viewer.js
